kub/clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-ip
spec:
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: 3000
#  type: ClusterIP
